Fixed some stuff

--- a/flops.tex
+++ b/flops.tex
@@ -176,7 +176,7 @@ We define spherical functors analogously.
 
 
 \begin{definition}
-	A \emph{functorial exact triangle} is a 'triangle' of exact functors $F_{1}, F_{2}, F_{3} : \mathcal{C}\to \mathcal{D}$,    equipped with natural transformations $$
+	A functorial exact triangle is a 'triangle' of exact functors $F_{1}, F_{2}, F_{3} : \mathcal{C}\to \mathcal{D}$,    equipped with natural transformations $$
 F_{1}(-)\to F_{2}(-)\to F_{3}(-)\to F_{1}(-)[1]
 $$ such that for every object $\mathcal{F}\in \mathcal{C}$,   we get the exact triangle in $\mathcal{D}$ given by $$
 F_{1}(\mathcal{F})\to F_{2}(\mathcal{F})\to F_{3}(\mathcal{F})\to F_{1}(\mathcal{F})[1]
@@ -186,11 +186,11 @@ $$
 Consider an adjoint pair of exact functors $L \dashv R$. Let $\eta : \mathrm{Id}_\mathcal{D}\to R\circ L$ be the unit and $\epsilon : L\circ R \to \mathrm{Id}_\mathcal{C}$ the counit. 
 
 \begin{definition}
-A functor between triangulated categories $F: \mathcal{A}\to \mathcal{B}$ is called \emph{spherical} if it admits an adjunction $F^{*}\dashv F$ and  functorial exact triangles 
+A functor between triangulated categories $F: \mathcal{A}\to \mathcal{B}$ is called spherical if it admits an adjunction $F^{*}\dashv F$ and  functorial exact triangles 
 \begin{align}
 F^{*}F \xrightarrow{\epsilon} \mathrm{Id}_\mathcal{A}&\to T \to F^{*}F [1] \\
 C\to \mathrm{Id}_\mathcal{B}&\xrightarrow{\eta} F F^{*}\to C[1]
-\end{align} such that $T$ and $C$ are equivalences. Then we call $T$ (resp. $C$) the \emph{spherical twist}(resp. \emph{cotwist}) along $F$. 
+\end{align} such that $T$ and $C$ are equivalences. Then we call $T$ (resp. $C$) the spherical twist(resp. cotwist) along $F$. 
 \end{definition}
 
 
