some bibliography stuff

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -299,19 +299,8 @@
 	pages = {67--104},
 }
 
-@article{coates_git_walls,
-shorthand = {Coa},
-author = {Coates, Tom},
-title = {WALL-CROSSINGS IN TORIC GROMOV–WITTEN THEORY II:
-LOCAL EXAMPLES},
-howpublished = {\url{https://arxiv.org/pdf/0804.2592.pdf}},
-month = {},
-year = {},
-note = {(Accessed on 04/16/2024)}
-}
-
 @article{halpernleistner2016autoequivalences,
-    shorthand = {HalpShip16},
+    shorthand = {HLS16},
     title={Autoequivalences of derived categories via geometric invariant theory}, 
     author = {Halpern-Leistner, Daniel and Shipman, Ian},
     journal = {Adv. Math.},
@@ -321,7 +310,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @article{Kite_2022,
-   shorthand={EdKite22},
+   shorthand={KS22},
    title={Discriminants and Semi-orthogonal Decompositions},
    volume={390},
    ISSN={1432-0916},
@@ -356,7 +345,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{donovan2017perverse,
-shorthand = {Don},
+shorthand = {Don17},
       title={Perverse schobers and wall crossing}, 
       author={W. Donovan},
       year={2017},
