Fix a bibliography entry

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -136,8 +136,8 @@
     pages = {35--64},
 }
 
-@article{Ed,
-    shorthand = {Ed11},
+@article{ed_gitlg_2011,
+    shorthand = {Seg11},
     author = {Segal, Ed},
     title = {Equivalence between {GIT} quotients of {L}andau-{G}inzburg {B}-models},
     journal = {Comm. Math. Phys.},
