--- a/singularities.tex
+++ b/singularities.tex
@@ -249,7 +249,7 @@ leads to the notion of \emph{graded matrix factorizations}; see
     symmetry, (graded) matrix factorizations arise as the conjectural (due to
     Kontsevich) category of B-branes on a Landau--Ginzburg model $(X,W)$,
     generalizing the case $W=0$ which should give $D^b(X)$. See
-    \cite{OrlovTheorem}, \cite{Ed}.
+    \cite{OrlovTheorem}, \cite{ed_gitlg_2011}.
 \end{remark}
 
 \subsection{Comparing categories of singularities and matrix factorizations}
